--- a/folder/index.html
+++ b/folder/index.html
@@ -4,27 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Esta es mi pagina Web Segura con SSH "YuJU"</title>
-    <link rel="stylesheet" href="css/estilos.css" />
+    <title>Bernardo</title>
 </head>
 <body>
-    <div id="container">
-        <div id="cabecera"> 
-            
-            INGENIERIA ELÉCTRICA +  ARQUITECTURA DEL FUTURO
-                              FELICES
-
-        </div>
-        <div id="post">
-            <h1>BIENVENIDOS a Servicios de Ingenieria Eléctrica BADR</h1>
-            <p> 
-                Hacemos Trabajos de instalaciones eléctricas y diseños de interiores
-                Ofrecemos servicios integrales en ingenieria eléctrica para su instalación residencial e Industrial</p>
-            <p><img src="imagenes/DiagramaFork.png" width="100%" /></p>
-            <p> Contactanos al +56977545456 y al correo bernardoantoniod@gmail.com
-                Y por las Redes Sociales
-            </p>
-        </div>
-    </div>
+    
 </body>
 </html>
