--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bernardo</title>
+    <title>BADR</title>
 </head>
 <body>
-    <p> Pagina web </p>
+    <section>
+        <h1> PÁGINA WEB HECHA POR BERNARDO </h1>
+        <P> Estoy aprendiendo como hacer páginas Web </P>
+        <ul> Quiero hacer paáginas para
+            <li>Julliete Desing</li>
+            <li>Posada Don Remigio</li>
+            <li>Ingenieria Eléctrica</li>
+            <li>Araguato Cerveceria</li>
+        </ul>
+    </section>
+    <p> Vamos  </p>
 </body>
 </html>
