Agregue varias etiquetas, una imagen, un formulario y un enlace

--- a/index.html
+++ b/index.html
@@ -14,9 +14,43 @@
             <li>Julliete Desing</li>
             <li>Posada Don Remigio</li>
             <li>Ingenieria Eléctrica</li>
-            <li>Araguato Cerveceria</li>
+            <li>Arawuato Cerveceria</li>
         </ul>
     </section>
-    <p> Vamos  </p>
+    
+    <section>
+
+        <h2> Voy a suibir una imagen desde pexels </h2>
+
+        <p> Lo que se hace es que busco la imagen y copio su dirección. Y aqui coloco una etiqueta de imagen y la subo</p>
+        <img src="https://images.pexels.com/photos/270348/pexels-photo-270348.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Imagen de codigo">
+
+
+    </section>
+
+    <section>
+
+        <h2> Ahora voy a hacer un formulario para que los usuarios se inscriban (o lo que sea) </h2>
+
+        <form action="">
+
+            <label for="name">Ingrese su nombre</label>
+            <input type="text" name="" id="name">
+            <label for="run">Ingrese su RUT</label>
+            <input type="text" name="" id="run">
+
+        </form>
+
+        <footer>
+            <a href="https://pattyland.cl/">Visitenos en nuestra tienda virtual</a>
+        </footer>
+
+
+
+
+    </section>
+    
+
+
 </body>
 </html>
