--- a/my-assets/my-navbar.html
+++ b/my-assets/my-navbar.html
@@ -11,8 +11,51 @@
     <title>Principal</title>
 </head>
 <body>
-    <header>
-        <nav>
+    <header class="first-header">
+
+        <nav class="first-nav">
+
+            <img class="menu-mobile" src="" alt="menu-logo">
+
+            <section class="navbar-left-container">
+
+                <img class="logo" src="" alt="brand-logo">
+
+                <ul>
+
+                    <li>
+                        <a href="">Clothes</a>
+                    </li>
+
+                    <li>
+                        <a href="">Forniture</a>
+                    </li>
+
+                    <li>
+                        <a href="">Toys</a>
+                    </li>
+
+                    <li>
+                        <a href="">Othres</a>
+                    </li>
+
+                </ul>
+
+            </section>
+
+            <section class="navbar-right-container">
+
+                <ul>
+
+                    <li class="navbar-email">bernardoantoniod@gmail.com</li>
+
+                    <li>
+                        <img src="" alt="secondary-icon">
+                    </li>
+
+                </ul>
+
+            </section>
             
         </nav>
     </header>
