--- a/my-assets/my-navbar.html
+++ b/my-assets/my-navbar.html
@@ -15,11 +15,11 @@
 
         <nav class="first-nav">
 
-            <img class="menu-mobile" src="" alt="menu-logo">
+            <img class="menu-mobile" src="./icons/menu.png" alt="menu-logo">
 
             <section class="navbar-left-container">
 
-                <img class="logo" src="" alt="brand-logo">
+                <img class="logo" src="./icons/border-collie.png" alt="brand-logo">
 
                 <ul>
 
@@ -50,7 +50,7 @@
                     <li class="navbar-email">bernardoantoniod@gmail.com</li>
 
                     <li>
-                        <img src="" alt="secondary-icon">
+                        <img class="carrito" src="./icons/carrito.png" alt="secondary-icon">
                     </li>
 
                 </ul>
@@ -60,6 +60,55 @@
         </nav>
     </header>
 
+
+    <header class="second-header">
+
+        <nav class="second-nav">
+
+            <img class="menu-mobile-2" src="./icons/menu.png" alt="menu-logo-2">
+
+            <section class="navbar-left-container-2">
+
+                <img class="logo-2" src="./icons/border-collie.png" alt="brand-logo-2">
+
+                <ul>
+
+                    <li>
+                        <a href="">Clothes</a>
+                    </li>
+
+                    <li>
+                        <a href="">Forniture</a>
+                    </li>
+
+                    <li>
+                        <a href="">Toys</a>
+                    </li>
+
+                    <li>
+                        <a href="">Othres</a>
+                    </li>
+
+                </ul>
+
+            </section>
+
+            <section class="navbar-right-container-2">
+
+                <ul>
+
+                    <li class="navbar-email-2">bernardoantoniod@gmail.com</li>
+
+                    <li>
+                        <img class="carrito-2" src="./icons/carrito.png" alt="secondary-icon">
+                    </li>
+
+                </ul>
+
+            </section>
+            
+        </nav>
+    </header>
 
 
 
