--- a/my-assets/my-navbar.html
+++ b/my-assets/my-navbar.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles.css">
-    <title>Principal</title>
+    <link rel="stylesheet" href="./navbars-styles.css">
+    <title>Navbars</title>
 </head>
 <body>
     <header class="first-header">
