--- a/dogsApiRest/index.html
+++ b/dogsApiRest/index.html
@@ -23,33 +23,51 @@
         <button id="random-button">Get Random Doggys</button>
 
         <section class="random-articules-container">
-            <article>
+            <article class="random-articule">
                 <section class="random-image-container">
                     <img class="random-image1" alt="doggy-image">
-                    <button class="save-random-button">Save to Favorites</button>
+                    <button class="save-random-button1">Save to Favorites</button>
                 </section>
             </article>
 
-            <article>
+            <article class="random-articule">
                 <section class="random-image-container">
                     <img class="random-image2" alt="doggy-image">
-                    <button class="save-random-button">Save to Favorites</button>
+                    <button class="save-random-button2">Save to Favorites</button>
                 </section>
             </article>
 
-            <article>
+            <article class="random-articule">
                 <section class="random-image-container">
                     <img class="random-image3" alt="doggy-image">
-                    <button class="save-random-button">Save to Favorites</button>
+                    <button class="save-random-button3">Save to Favorites</button>
                 </section>
             </article>
 
-            <article>
+            <article class="random-articule">
                 <section class="random-image-container">
                     <img class="random-image4" alt="doggy-image">
-                    <button class="save-random-button">Save to Favorites</button>
+                    <button class="save-random-button4">Save to Favorites</button>
                 </section>
             </article>
+
+        </section>
+
+    </section>
+
+    <h2 class="favorites-title">These are your favorites Doggys</h2>
+
+    <section class="favorites-horizontal-container">
+
+        <section class="scroll-content">
+
+            <article class="favorite-article">
+                <section class="favorite-image-container">
+                    <img class="favorite-image" src="https://cdn2.thedogapi.com/images/Sk-dcXjN7.gif" alt="doggy-image">
+                    <button class="delete-favorite-button">Delete from Favorites</button>
+                </section>
+            </article>
+
 
         </section>
 
