--- a/dogsApiRest/index.html
+++ b/dogsApiRest/index.html
@@ -17,6 +17,8 @@
     </header>
 
     <span class="error-span"></span>
+    <span class="error-span2"></span>
+    <span class="error-span3"></span>
 
     <section class="random-container">
 
@@ -59,14 +61,14 @@
 
     <section class="favorites-horizontal-container">
 
-        <section class="scroll-content">
+        <!-- <section class="scroll-content">
 
             <article class="favorite-article">
                 <section class="favorite-image-container">
                     <img class="favorite-image" src="https://cdn2.thedogapi.com/images/Sk-dcXjN7.gif" alt="doggy-image">
                     <button class="delete-favorite-button">Delete from Favorites</button>
                 </section>
-            </article>
+            </article> -->
 
 
         </section>
