dog lovers IV - litte adjust

--- a/dogsApiRest/index.html
+++ b/dogsApiRest/index.html
@@ -19,6 +19,7 @@
     <span class="error-span"></span>
     <span class="error-span2"></span>
     <span class="error-span3"></span>
+    <span class="error-span4"></span>
 
     <section class="random-container">
 
@@ -70,8 +71,21 @@
                 </section>
             </article> -->
 
-
         </section>
+
+    </section>
+
+    <h2 class="own-dogs-title">Doggys of your own</h2>
+
+    <section class="own-dogs-container">
+
+        <form action="">
+
+            <input type="file" name="file" id="file" placeholder="Select a image"> <!-- This is how use an input to upload a file-->
+            <button type="button">Upload your Doggy image</button> <!-- This is how use a button to prevent default -->
+
+        </form>
+
 
     </section>
     
