dog lovers V - uploadind own images with FormData

--- a/dogsApiRest/index.html
+++ b/dogsApiRest/index.html
@@ -69,26 +69,30 @@
                     <img class="favorite-image" src="https://cdn2.thedogapi.com/images/Sk-dcXjN7.gif" alt="doggy-image">
                     <button class="delete-favorite-button">Delete from Favorites</button>
                 </section>
-            </article> -->
+            </article>
 
-        </section>
+        </section> -->
 
     </section>
-
-    <h2 class="own-dogs-title">Doggys of your own</h2>
 
     <section class="own-dogs-container">
 
-        <form action="">
+        <h2 class="own-dogs-title">Doggys of your own</h2>
 
-            <input type="file" name="file" id="file" placeholder="Select a image"> <!-- This is how use an input to upload a file-->
-            <button type="button">Upload your Doggy image</button> <!-- This is how use a button to prevent default -->
+        <form  id="upload-form" class="form-style" action="">
+
+            <input type="file" name="file" id="file" placeholder="Select an image"> <!-- This is how use an input to upload a file-->
+            <button class="upload-button" type="button" onclick="uploadDog()">Upload your Doggy image</button> <!-- This is how use a button to prevent default -->
 
         </form>
 
+    </section>
+
+    
+    <section class="your-own-doggys">
+
 
     </section>
-    
 
 
 
