dog lovers VI - My design: reading uploaded images, and posting on another section

--- a/dogsApiRest/index.html
+++ b/dogsApiRest/index.html
@@ -81,16 +81,17 @@
 
         <form  id="upload-form" class="form-style" action="">
 
-            <input type="file" name="file" id="file" placeholder="Select an image"> <!-- This is how use an input to upload a file-->
-            <button class="upload-button" type="button" onclick="uploadDog()">Upload your Doggy image</button> <!-- This is how use a button to prevent default -->
+            <input class="select-input" type="file" name="file" id="file" placeholder="Select an image"> <!-- This is how use an input to upload a file-->
+            <button class="upload-button" type="button" onclick="uploadDog()">Upload your own Doggy</button> <!-- This is how use a button to prevent default -->
 
         </form>
 
     </section>
 
-    
+
     <section class="your-own-doggys">
 
+        <!-- This section has the images of Own Doggys -->
 
     </section>
 
