dog lovers VII - My design Completed :)

--- a/dogsApiRest/index.html
+++ b/dogsApiRest/index.html
@@ -20,6 +20,7 @@
     <span class="error-span2"></span>
     <span class="error-span3"></span>
     <span class="error-span4"></span>
+    <span class="error-span5"></span>
 
     <section class="random-container">
 
@@ -77,7 +78,7 @@
 
     <section class="own-dogs-container">
 
-        <h2 class="own-dogs-title">Doggys of your own</h2>
+        <h2 class="own-dogs-title">Your own Doggys</h2>
 
         <form  id="upload-form" class="form-style" action="">
 
