dog lovers ajustes

--- a/dogsApiRest/index.html
+++ b/dogsApiRest/index.html
@@ -12,7 +12,7 @@
     <header class="header-container">
         <h1>Us The Dog's Lovers</h1>
         <p>Esta es una aplicacion para los que disfrutamos de los perritos.
-            Disfruta al recargar imagenes aleatorias de perritos... Y si te gusta alguna, puedes guardarla en la sección de Favoritos 
+            Disfruta al recargar imagenes aleatorias de perritos... Si te gusta alguno de estos perritos, puedes guardarla en la sección de Favoritos. Tambien puedes subir imagenes propias de tus perritos
         </p>
     </header>
 
@@ -82,7 +82,7 @@
 
         <form  id="upload-form" class="form-style" action="">
 
-            <input class="select-input" type="file" name="file" id="file" placeholder="Select an image"> <!-- This is how use an input to upload a file-->
+            <input class="select-input" type="file" name="file" id="file"> <!-- This is how use an input to upload a file-->
             <button class="upload-button" type="button" onclick="uploadDog()">Upload your own Doggy</button> <!-- This is how use a button to prevent default -->
 
         </form>
@@ -94,6 +94,35 @@
 
         <!-- This section has the images of Own Doggys -->
 
+    </section>
+
+
+    <section class="footer-2-container">
+
+        <footer class="footer-2">
+
+            <p class="companny-2">
+
+                <a href="">
+                    <img class="brand-logo-2" src="./icons/border-collie.png" alt="brand-logo">
+                </a>
+
+                <img class="autors-right" src="./icons/derechos-de-autor.png" alt="Autor-Rights">
+
+                2023 __BADR__ Company, Inc
+            
+            </p>
+
+            <section class="footers-items-2">
+
+                <img src="./icons/gorjeo.png" alt="twitter">
+
+                <img src="./icons/instagram.png" alt="instagram">
+
+                <img src="./icons/facebook.png" alt="facebook">
+
+            </section>
+        </footer>
     </section>
 
 
